Load d3.js's script via https

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
     <br><br>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
 
     <script>
       var data = {{results | safe}}
