--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,6 @@
         max-width: 1000px;
       }
 
-      .node circle {
-        fill: #fff;
-        stroke: steelblue;
-        stroke-width: 3px;
-      }
       .node text { font: 12px sans-serif; }
       .link {
         fill: none;
@@ -63,59 +58,176 @@
 
     <script>
       var data = {{results | safe}}
-      // ************** Generate the tree diagram  *****************
-      var margin = {top: 20, right: 120, bottom: 20, left: 120},
-          width = 960 - margin.right - margin.left,
-          height = 500 - margin.top - margin.bottom;
-          
-      var i = 0;
-      var tree = d3.layout.tree()
-          .size([height, width]);
-      var diagonal = d3.svg.diagonal()
-          .projection(function(d) { return [d.y, d.x]; });
-      var svg = d3.select("#results").append("svg")
-          .attr("width", width + margin.right + margin.left)
-          .attr("height", height + margin.top + margin.bottom)
-        .append("g")
-          .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+      var margin = {
+          top: 20,
+          right: 120,
+          bottom: 20,
+          left: 120
+      },
+      width = 960 - margin.right - margin.left,
+      height = 800 - margin.top - margin.bottom;
 
-      // load the external data
-      root = data[0];
+      var root = data[0]
+
+      var i = 0,
+          duration = 750,
+          rectW = 150,
+          rectH = 100;
+
+      var tree = d3.layout.tree().nodeSize([100, 50]);
+      var diagonal = d3.svg.diagonal()
+          .projection(function (d) {
+          return [d.x + rectW / 2, d.y + rectH / 2];
+      });
+
+      var svg = d3.select("#results").append("svg").attr("width", 1000).attr("height", 1000)
+          .call(zm = d3.behavior.zoom().scaleExtent([1,3])).append("g")
+          .attr("transform", "translate(" + 350 + "," + 20 + ")");
+
+      //necessary so that zoom knows where to zoom and unzoom from
+      zm.translate([350, 20]);
+
+      root.x0 = 0;
+      root.y0 = height / 2;
+
+      function collapse(d) {
+          if (d.children) {
+              d._children = d.children;
+              d._children.forEach(collapse);
+              d.children = null;
+          }
+      }
+
       update(root);
 
+      d3.select("#results").style("height", "800px");
+
       function update(source) {
-        var nodes = tree.nodes(root).reverse(),
-            links = tree.links(nodes);
 
-        nodes.forEach(function(d) { d.y = d.depth * 180; });
+          // Compute the new tree layout.
+          var nodes = tree.nodes(root).reverse(),
+              links = tree.links(nodes);
 
-        var node = svg.selectAll("g.node")
-            .data(nodes, function(d) { return d.id || (d.id = ++i); });
+          // Normalize for fixed-depth.
+          nodes.forEach(function (d) {
+              d.y = d.depth * 200;
+          });
 
-        var nodeEnter = node.enter().append("g")
-            .attr("class", "node")
-            .attr("transform", function(d) { 
-                return "translate(" + d.y + "," + d.x + ")"; });
-        nodeEnter.append("circle")
-            .attr("r", 10)
-            .style("fill", "#fff");
-        nodeEnter.append("text")
-            .attr("x", function(d) { 
-                return d.children || d._children ? -13 : 13; })
-            .attr("dy", ".35em")
-            .attr("text-anchor", function(d) { 
-                return d.children || d._children ? "end" : "start"; })
-            .text(function(d) { return d.name; })
-            .style("fill-opacity", 1);
+          // Update the nodes…
+          var node = svg.selectAll("g.node")
+              .data(nodes, function (d) {
+              return d.id || (d.id = ++i);
+          });
 
-        var link = svg.selectAll("path.link")
-            .data(links, function(d) { return d.target.id; });
+          // Enter any new nodes at the parent's previous position.
+          var nodeEnter = node.enter().append("g")
+              .attr("class", "node")
+              .attr("transform", function (d) {
+              return "translate(" + source.x0 + "," + source.y0 + ")";
+          });
 
-        link.enter().insert("path", "g")
-            .attr("class", "link")
-            .attr("d", diagonal);
+          nodeEnter.append("rect")
+              .attr("width", rectW)
+              .attr("height", rectH)
+              .attr("stroke", "black")
+              .attr("stroke-width", 1)
+              .style("fill", function (d) {
+              return "#fff";
+          });
+
+          nodeEnter.append("text")
+              .attr("x", rectW / 2)
+              .attr("y", rectH / 2)
+              .attr("dy", ".35em")
+              .attr("text-anchor", "middle")
+              .text(function (d) {
+              return d.name;
+          });
+
+          // Transition nodes to their new position.
+          var nodeUpdate = node.transition()
+              .duration(duration)
+              .attr("transform", function (d) {
+              return "translate(" + d.x + "," + d.y + ")";
+          });
+
+          nodeUpdate.select("rect")
+              .attr("width", rectW)
+              .attr("height", rectH)
+              .attr("stroke", "black")
+              .attr("stroke-width", 1)
+              .style("fill", function (d) {
+              return "#fff";
+          });
+
+          nodeUpdate.select("text")
+              .style("fill-opacity", 1);
+
+          // Transition exiting nodes to the parent's new position.
+          var nodeExit = node.exit().transition()
+              .duration(duration)
+              .attr("transform", function (d) {
+              return "translate(" + source.x + "," + source.y + ")";
+          })
+              .remove();
+
+          nodeExit.select("rect")
+              .attr("width", rectW)
+              .attr("height", rectH)
+              .attr("stroke", "black")
+              .attr("stroke-width", 1);
+
+          nodeExit.select("text");
+
+          // Update the links…
+          var link = svg.selectAll("path.link")
+              .data(links, function (d) {
+              return d.target.id;
+          });
+
+          // Enter any new links at the parent's previous position.
+          link.enter().insert("path", "g")
+              .attr("class", "link")
+              .attr("x", rectW / 2)
+              .attr("y", rectH / 2)
+              .attr("d", function (d) {
+              var o = {
+                  x: source.x0,
+                  y: source.y0
+              };
+              return diagonal({
+                  source: o,
+                  target: o
+              });
+          });
+
+          // Transition links to their new position.
+          link.transition()
+              .duration(duration)
+              .attr("d", diagonal);
+
+          // Transition exiting nodes to the parent's new position.
+          link.exit().transition()
+              .duration(duration)
+              .attr("d", function (d) {
+              var o = {
+                  x: source.x,
+                  y: source.y
+              };
+              return diagonal({
+                  source: o,
+                  target: o
+              });
+          })
+              .remove();
+
+          // Stash the old positions for transition.
+          nodes.forEach(function (d) {
+              d.x0 = d.x;
+              d.y0 = d.y;
+          });
       }
-    </script>
+  </script>
 
   </body>
 </html>
